--- a/index.html
+++ b/index.html
@@ -17,4 +17,4 @@ layout: main
 {% endfor %}
 
 {% include pagination.html %}
-{% include google3bc47e98b20e5d06.html %}
+{{ site.baseurl }}{% link /google3bc47e98b20e5d06.html %}
